spacing fixes, hides overflow-x on body

--- a/static/css/partials/_card-feature-side.scss
+++ b/static/css/partials/_card-feature-side.scss
@@ -39,7 +39,7 @@
                 .author{
                     position:absolute;
                     bottom:0;
-                    height: 16px;
+                    height: 18px;
                 }
                
             }
