--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -14,7 +14,8 @@ p {
     margin:0;
 }
 body{
-    overflow-y:scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     -webkit-overflow-scrolling:touch;
     color: color(dark);
     // background: #fff;
